--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends 'layout.html'%}
 
 {% block body %}
+<div class="container-mt-4">
 <div class="row">
-   <div class="col-md-5">
+   <div class="col-lg-4">
     {% with messages = get_flashed_messages(category_filter=["confirmation"]) %}
         {% if messages  %}
             {% for message in messages %}
@@ -30,24 +31,27 @@
             <div class="card card-body mb-4 ">
                 <form action="/add_contact" method="POST">
                     <div class="form-group">
-                        <input type="text" name="cedula" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
+                        <input type="text" required name="cedula" placeholder="Cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
                     </div>
                     <div class="form-group">
-                        <input type="text" name="nombre" placeholder="nombre completo" class="form-control" onkeyup="this.value=this.value.replace(/[^a-z]/g,'');">
+                        <input type="text" required name="nombre" placeholder="Nombre" class="form-control" onkeyup="this.value=this.value.replace(/[^a-zA-Z ]/g,'');">
                     </div>
                     <div class="form-group">
-                        <input type="text" name="direccion" placeholder="direccion" class="form-control">
-                    </div>
-                    <div>
-                        <input type="text" name="telefono" placeholder="telefono" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
+                        <input type="text" required name="direccion" placeholder="Direccion" class="form-control">
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block form-control">Guardar</button>
+                        <input type="text" required name="telefono" placeholder="Telefono" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="correo" placeholder="Correo"  class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block form-control ">Guardar</button>
                     </div>
                 </form>
         </div>
     </div>
-        <div class=".col-md-7">
+        <div class="col-lg-8">
             <table class="table table-striped table-hover table-bordered table-sm bg-white">
                 <thead>
                     <tr>
@@ -55,6 +59,7 @@
                         <td>Nombre</td>
                         <td>Direccion</td>
                         <td>Telefono</td>
+                        <td>Correo</td>
                         <td>Acciones</td>
                     </tr>
                 </thead>
@@ -65,6 +70,8 @@
                     <td>{{ cliente.1 }}</td>
                     <td>{{ cliente.2 }}</td>
                     <td>{{ cliente.3 }}</td>
+                    <td>{{ cliente.4 }}</td>
+                  
                     <td>
                         <a href='/edit/{{ cliente.0 }}' class="btn btn-secondary">Editar</a>
                         <a href='/delete/{{ cliente.0 }}' class="btn btn-danger btn-delete">Eliminar</a>
@@ -75,5 +82,6 @@
             </table>
         </div>
     </div>  
+    </div>
 
 {% endblock %}
