--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
 {% block body %}
 <div class="container-mt-4">
 <div class="row">
+    <div class="col-lg-12 mb-4">
+        <h1 class="text-center font-weight-bold"> Clientes </h1>
+    </div>
    <div class="col-lg-4">
     {% with messages = get_flashed_messages(category_filter=["confirmation"]) %}
         {% if messages  %}
