--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}"">
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.css') }}"">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}"">
-    <title></title>
+    <title>SolidNetwork.Net</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
@@ -36,6 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="{{url_for('static',filename='js/main.js') }}"></script>
+    
 
 </body>
 </html>
