--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -3,6 +3,9 @@
 {% block body %}
 <div class="container-mt-4">
 <div class="row">
+    <div class="col-lg-12 mb-4">
+        <h1 class="text-center font-weight-bold "> Pagos </h1>
+    </div>
    <div class="col-lg-4">
     {% with messages = get_flashed_messages(category_filter=["confirmation"]) %}
         {% if messages  %}
@@ -27,19 +30,18 @@
                 </div>
             {% endfor %}
         {% endif %}
-    {% endwith %}  
+    {% endwith %}
+                
             <div class="card card-body mb-4 ">
+                
                 <form action="/agregar_pago" method="POST">
                     <div class="form-group">
-                        <input type="text" required name="cedula" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" required name="nombre" placeholder="nombre completo" class="form-control" onkeyup="this.value=this.value.replace(/[^a-zA-Z ]/g,'');">
+                        <input type="text" id = "cedula" required name="cedula" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
                     </div>
                     <div class="form-group">
                         <input type="month" name="mes" step="1" min="2020-12" max="2500-12" value="2020-01" >
                     </div>
-                    <div>
+                    <div class="form-group">
                         <input type="text" required name="valor" placeholder="valor" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
                     </div>
                     <div class="form-group">
@@ -49,26 +51,36 @@
         </div>
     </div>
         <div class="col-lg-8">
+            <div class="form-group">
+                <form action="/filtrar_usuario" method="POST" class="form-inline">
+                    <div class="form-group">
+                        <input type="text" id = "cedula" required name="cedula" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
+                    </div>
+                    <div class="form-group  mx-2">
+                        <button type="submit" class="btn btn-primary btn-block form-control">Buscar</button>
+                    </div>
+                    
+                </form>
+            </div>
             <table class="table table-striped table-hover table-bordered table-sm bg-white">
                 <thead>
                     <tr>
                         <td>Cedula</td>
-                        <td>Nombre</td>
-                        <td>Direccion</td>
-                        <td>Telefono</td>
+                        <td>Mes Pagado</td>
+                        <td>Valor</td>
                         <td>Acciones</td>
                     </tr>
                 </thead>
                 <tbody>
-                {% for cliente in clientes%}
+                {% for pago in pagos%}
                 <tr>
-                    <td>{{ cliente.0 }}</td>
-                    <td>{{ cliente.1 }}</td>
-                    <td>{{ cliente.2 }}</td>
-                    <td>{{ cliente.3 }}</td>
+                    <td>{{ pago.1 }}</td>
+                    <td>{{ pago.2 }}</td>
+                    <td>{{ pago.3 }}</td>
+                    <td>{{ pago.4 }}</td>
                     <td>
-                        <a href='/edit/{{ cliente.0 }}' class="btn btn-secondary">Editar</a>
-                        <a href='/delete/{{ cliente.0 }}' class="btn btn-danger btn-delete">Eliminar</a>
+                        <a href='/editar_pago/{{ pago.0 }}' class="btn btn-secondary">Editar</a>
+                        <a href='/borrar_pago/{{ pago.0 }}' class="btn btn-danger btn-delete">Eliminar</a>
                     </td>
                 </tr>
             {% endfor %}
