--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -54,7 +54,7 @@
             <div class="form-group">
                 <form action="/filtrar_usuario" method="POST" class="form-inline">
                     <div class="form-group">
-                        <input type="text" id = "cedula" required name="cedula" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
+                        <input type="text" id = "cedula" required name="filter_id" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
                     </div>
                     <div class="form-group  mx-2">
                         <button type="submit" class="btn btn-primary btn-block form-control">Buscar</button>
