--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends 'layout.html'%}
-
+{% block title %}
+        {{ super() }} 
+            Clientes 
+{% endblock %} 
 {% block body %}
 <div class="container-mt-4">
 <div class="row">
