--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html'%}
 
+{% block title %}
+        {{ super() }} 
+            Pagos
+{% endblock %} 
+
 {% block body %}
 <div class="container-mt-4">
 <div class="row">
@@ -30,16 +35,14 @@
                 </div>
             {% endfor %}
         {% endif %}
-    {% endwith %}
-                
+    {% endwith %}      
             <div class="card card-body mb-4 ">
-                
                 <form action="/agregar_pago" method="POST">
                     <div class="form-group">
                         <input type="text" id = "cedula" required name="cedula" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
                     </div>
                     <div class="form-group">
-                        <input type="month" name="mes" step="1" min="2020-12" max="2500-12" value="2020-01" >
+                        <input type="date" name="mes" step="1" min="2020-01-01" max="2500-12-31" value="2020-01" >
                     </div>
                     <div class="form-group">
                         <input type="text" required name="valor" placeholder="valor" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
@@ -52,13 +55,25 @@
     </div>
         <div class="col-lg-8">
             <div class="form-group">
-                <form action="/filtrar_usuario" method="POST" class="form-inline">
+                <form action="/pagos" method="POST" class="form-inline">
                     <div class="form-group">
                         <input type="text" id = "cedula" required name="filter_id" placeholder="cedula" class="form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57' onpaste="return false">
                     </div>
                     <div class="form-group  mx-2">
                         <button type="submit" class="btn btn-primary btn-block form-control">Buscar</button>
                     </div>
+                    {% with errors = get_flashed_messages(category_filter=["not_found"]) %}
+                        {% if errors %}
+                            {% for error in errors %}
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    {{ error }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                             {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                     
                 </form>
             </div>
@@ -77,7 +92,7 @@
                     <td>{{ pago.1 }}</td>
                     <td>{{ pago.2 }}</td>
                     <td>{{ pago.3 }}</td>
-                    <td>{{ pago.4 }}</td>
+                   
                     <td>
                         <a href='/editar_pago/{{ pago.0 }}' class="btn btn-secondary">Editar</a>
                         <a href='/borrar_pago/{{ pago.0 }}' class="btn btn-danger btn-delete">Eliminar</a>
@@ -89,5 +104,4 @@
         </div>
     </div>  
     </div>
-
 {% endblock %}
