--- a/templates/edit_contact.html
+++ b/templates/edit_contact.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="card card-body">
-                <form action="/update/{{cliente.0}} " method="POST"> 
+                <form action="/update_customer/{{cliente.0}} " method="POST"> 
                 <div class="form-group">   
                     <label for="nombre">Nombre</label> 
                     <input type="text" name="nombre" placeholder="Nombre" value='{{cliente.1}}' class="form-control" id="nombre" onkeyup="this.value=this.value.replace(/[^a-z]/g,'');">
