--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
           <a class="nav-link text-white " href="/" >Clientes <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white " href="/pagos">Pagos</a>
+          <a class="nav-link text-white " href="/payments">Pagos</a>
         </li>
       </ul>
     </div>
