--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,13 @@
             {% endfor %}
             </tbody>
             </table>
+            <form action="/print_customers">
+                <div class="form-group col-2">
+                    <button type="submit" class="btn btn-primary btn-block form-control ">PRINT</button>
+                </div>
+            </form>
         </div>
+       
     </div>  
     </div>
 
