--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.css') }}"">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}"">
     <title>
-      {% block title %}SolidNetwork.Net | {% endblock %}
+      {% block title %}SoluNetwork.Net | {% endblock %}
     </title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="/customers">
       <img src={{ url_for('static', filename='img/logo.png') }} alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +21,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link text-white " href="/" >Clientes <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-white " href="/customers" >Clientes <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white " href="/payments">Pagos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white " href="/logout">Salir</a>
         </li>
       </ul>
     </div>
