--- a/templates/login.html
+++ b/templates/login.html
@@ -6,32 +6,33 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}"">
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.css') }}"">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}"">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <title>SolidNetwork.Net</title>
 </head>
 <body>
-    
-    <div class="row">
-        
-        <div class="col-md-4 offset-md-4 mt-5">
-            <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-                <a class="navbar-brand" href="/">
-                  <img src={{ url_for('static', filename='img/logo.png') }} alt="logo">
-                </a>
-                <h1 class="text-center text-white font-weight-bold"> Login </h1>
-            </nav>
-            
-            <div class="card card-body">
-                <form action="/login_post " method="POST"> 
-                    <div class="form-group">   
-                        <input type="text" name="user" placeholder="User" class="form-control" id="user">
-                    </div>
-                    <div class="form-group">  
-                        <input type="password" name="password" placeholder="Password" class="form-control" id="password" >
-                    </div>
-                    <div class="form-group" >
-                        <button type="submit" class="btn btn-success btn-block">Guardar</button>
-                    </div>
-                </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 offset-md-4 mt-5">
+                <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+                    <a class="navbar-brand" href="/">
+                        <img src={{ url_for('static', filename='img/logo.png') }} alt="logo">
+                    </a>
+                    
+                </nav>
+                <div class="card card-body">
+                    <form action="{{ url_for('login') }}" method="POST"> 
+                        <h1 class="text-center text-black font-weight-bold mb-4"> Login </h1>
+                        <div class="form-group"> 
+                            <input type="text" name="username" placeholder="User" class="form-control" id="user" required>
+                        </div>
+                        <div class="form-group">  
+                            <input type="password" name="password" placeholder="Password" class="form-control" id="password" required>
+                        </div>
+                        <div class="form-group" >
+                            <button type="submit" class="btn btn-success btn-block">Guardar</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>       
